# autotest

./: .gitignore  AgenticFlow.drawio  README.md  WARP.md  graph.ipynb  main.py  prompt.txt  pyproject.toml  settings.py
agent/: .gitignore  agent.py  memory.py  models.py  prompts.py  pyproject.toml  tools.py
agent/coder/: agent.py  prompts.py  schemas.py  tools.py
agent/coder/hooks/: pre_model_hook.py
agent/executor/: agent.py  prompts.py  schemas.py  tools.py
agent/executor/hooks/: pre_model_hook.py
agent/hooks/: pre_model_hook.py
agent/planner/: agent.py  prompts.py  schemas.py  tools.py
agent/planner/hooks/: pre_model_hook.py
agent/src/agent/: models.py  settings.py
configs/: settings.py  state_config.py
projects/todo-app/: package.json
projects/todo-app/public/: index.html
projects/todo-app/src/: index.css
server/: pyproject.toml
server/app/: config.py  main.py
server/app/api/v1/: router.py
server/app/api/v1/endpoints/: users.py
server/app/services/: user_service.py
server/src/server/: config.py  main.py
server/src/server/api/v1/: router.py
server/src/server/api/v1/endpoints/: chats.py  events.py  messages.py  users.py
server/src/server/core/: agent.py  database.py
server/src/server/models/: chat.py  event.py
server/src/server/schemas/: chat.py  event.py  user.py
server/src/server/services/: chat_service.py  events_service.py  user_service.py
server/tests/: test_stream.py  test_stream_tst.py
tools/math/: client.py  tools.py
tools/shell/: shell.py
ui/: package-lock.json  package.json
ui/src/: App.tsx
(+28 files in other folders)
