[project]
name = "autotest"
version = "0.1.0"
description = "An Agentic AI for testing random code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastmcp>=2.12.3",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "mcp[cli]>=1.14.0",
    "python-dotenv>=1.1.1",
    "jupyter>=1.1.1",
    "pyppeteer>=2.0.0",
    "nest-asyncio>=1.6.0",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.3.33",
    "langgraph-supervisor>=0.0.29",
    "colorama>=0.4.6",
]

